Java 9: MapStruct + QueryDSL